bmt/outline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9000"
    spec:
      containers:
        - name: outline
          image: outlinewiki/outline:0.75.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 4Gi
              cpu: "1"
            requests:
              memory: 1Gi
              cpu: 100m
          env: &env
            - name: URL
              value: https://docs.berkeley.mt
            - name: PORT
              value: "3000"

            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: outline
                  key: secret-key
            - name: UTILS_SECRET
              valueFrom:
                secretKeyRef:
                  name: outline
                  key: utils-secret

            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: outline-redis
                  key: password
            - name: REDIS_URL
              value: redis://:$(REDIS_PASSWORD)@outline-redis-master:6379

            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: outline.bmt-outline.credentials.postgresql.acid.zalan.do
                  key: password
            - name: DATABASE_URL
              value: postgres://outline:$(DATABASE_PASSWORD)@bmt-outline:5432/outline
            - name: DATABASE_URL_TEST
              value: postgres://outline:$(DATABASE_PASSWORD)@bmt-outline:5432/outline-test

            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: outline-bucket
                  key: AWS_ACCESS_KEY_ID
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: outline-bucket
                  key: AWS_SECRET_ACCESS_KEY
            - name: AWS_S3_UPLOAD_BUCKET_NAME
              valueFrom:
                configMapKeyRef:
                  name: outline-bucket
                  key: BUCKET_NAME
            - name: AWS_S3_UPLOAD_BUCKET_URL
              value: https://rgw.berkeley.mt
            - name: AWS_S3_ACL
              value: private

            - name: GOOGLE_CLIENT_ID
              value: 799809453242-iesp4onlaje1hu5h97iq313h6f06mjuo.apps.googleusercontent.com
            - name: GOOGLE_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: outline
                  key: google-client-secret

            - name: SMTP_HOST
              value: smtp.resend.com
            - name: SMTP_PORT
              value: "465"
            - name: SMTP_USERNAME
              value: resend
            - name: SMTP_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: outline
                  key: resend-api-key
            - name: SMTP_FROM_EMAIL
              value: noreply@berkeley.mt
