bmt/outline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
spec:
  clusterIP: None
  selector:
    app: outline
  ports:
    - port: 3000
